Closed Bug 211760 Opened 21 years ago Closed 21 years ago

Crashes with Immersion TouchWare (formerly Immersion Desktop)

Categories

(Core :: XUL, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mozilla, Assigned: aaronlev)

Details

Attachments

(1 file)

over the past few months crashes like bug 88070 and bug 116796 started happening
again related to Immersion TouchWare 2.9 (the new version of Immersion Desktop)

I wasn't originally able to reproduce it 100%, but upgrading the program to 2.9
seems to have amplified the problems.

There has been talk about this affecting Pheonix users as well (see bug 131465#16)

Steps to Reproduce:
File>New>Message

The frame of the new message window appears, and then Mozilla crashes in
Accessibility.dll

Talkback ID: TB21626449Z


There are a bunch of other crashes that are occuring somewhat randomly that I
think are related, but this is the easiest to reproduce... Most of them occur in
Mail-News, but I believe that is a coincidence.
Attachment #127157 - Flags: review?(jgaunt)
Comment on attachment 127157 [details] [diff] [review]
Need to check if doc accessible is initialzed and still alive before using mDocument

r=jgaunt
Attachment #127157 - Flags: review?(jgaunt) → review+
Attachment #127157 - Flags: superreview?(jst)
Comment on attachment 127157 [details] [diff] [review]
Need to check if doc accessible is initialzed and still alive before using mDocument

sr=jst
Attachment #127157 - Flags: superreview?(jst) → superreview+
Attachment #127157 - Flags: approval1.5a?
Attachment #127157 - Flags: approval1.5a? → approval1.5a+
Checked into 1.5b trunk.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: