Bug 211760. Crashing with Immersion Touchware. r=jgaunt, sr=jst